--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Ami9961/Chat-App#readme",
   "dependencies": {
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
