--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=https://chat-app-socketio-six.vercel.app
-VITE_SOCKET_URL=https://chat-app-socketio-six.vercel.app
+VITE_BACKEND_URL=https://chat-app-backendd-beta.vercel.app
+VITE_SOCKET_URL=https://chat-app-backendd-beta.vercel.app
